# RUST-gRPC-mongodb-microservice

./: Cargo.toml  README.md  build.rs  license.header  setting.toml
api/proto/: dbase.proto
src/: client.rs  motd.rs  server.rs  users.rs  util.rs
