[package]
name = "db-server"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the gRPC server
name = "db-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "db-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.3.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
once_cell = "1.20.3"
async-std = "1.13.0"

[build-dependencies]
tonic-build = "0.12.3"